// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spinner unit tests should render with shape 1`] = `
.emotion-0 {
  width: 950px;
  height: 950px;
  left: -459px;
  top: -332px;
  float: left;
  position: absolute;
  background-image: radial-gradient(rgb(199 159 0 / 15%) 0%, rgb(61 61 61 / 0%) 62%, #00000000 67%);
  border-radius: 50%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  z-index: -1;
  -webkit-animation-name: spin;
  animation-name: spin;
  -webkit-animation-duration: 300s;
  animation-duration: 300s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.emotion-0::after,
.emotion-0::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transform-origin: center;
  border-radius: 50%;
  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 65%, transparent 80%);
  mask-image: radial-gradient(rgba(0, 0, 0, 1) 65%, transparent 80%);
}

.emotion-0::before {
  background: repeating-conic-gradient(from 0deg, rgb(199, 159, 0, 0.3) 0deg 10deg, transparent 10deg 15deg);
  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.3) 36%, transparent 65%);
  mask-image: radial-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.3) 36%, transparent 65%);
  -webkit-animation: rotate 720s linear,scale 3s linear infinite;
  animation: rotate 720s linear,scale 3s linear infinite;
}

<div
  class="emotion-0"
  role="spinner"
  shape="[object Object]"
/>
`;

exports[`Spinner unit tests should render without shape 1`] = `
.emotion-0 {
  width: 950px;
  height: 950px;
  left: 240px;
  top: -332px;
  float: left;
  position: absolute;
  background-image: radial-gradient(rgb(199 159 0 / 15%) 0%, rgb(61 61 61 / 0%) 62%, #00000000 67%);
  border-radius: 50%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  z-index: -1;
  -webkit-animation-name: spin;
  animation-name: spin;
  -webkit-animation-duration: 300s;
  animation-duration: 300s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.emotion-0::after,
.emotion-0::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transform-origin: center;
  border-radius: 50%;
  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 65%, transparent 80%);
  mask-image: radial-gradient(rgba(0, 0, 0, 1) 65%, transparent 80%);
}

.emotion-0::before {
  background: repeating-conic-gradient(from 0deg, rgb(199, 159, 0, 0.3) 0deg 10deg, transparent 10deg 15deg);
  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.3) 36%, transparent 65%);
  mask-image: radial-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.3) 36%, transparent 65%);
  -webkit-animation: rotate 720s linear,scale 3s linear infinite;
  animation: rotate 720s linear,scale 3s linear infinite;
}

<div
  class="emotion-0"
  role="spinner"
  shape="[object Object]"
/>
`;
